solved spacing

--- a/my-carousel.css
+++ b/my-carousel.css
@@ -13,7 +13,8 @@ div.my-carousel {
 }
 div.my-carousel	div.my-carousel-item {
 	display: inline-block;
-	padding: 0 40px;
+	width: 100%;
+	margin-right: 40px;
 	white-space: normal;
 	vertical-align: middle;
 }
